--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, Seattle WA</div>
-                            <p>Built distributed and scalable payments platform to help sell digital products<i></i></p>
+                            <p>Subject Matter Expert for Twitch's distributed payments system that orchestrates "X-million $" transactions daily<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar 2021 - Feb 2025</span></div>
                     </div>
@@ -103,7 +103,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer (Part time)</h3>
                             <div class="subheading mb-3"><img alt src = "/assets/img/nyu.jpg" style="max-height: 35px;">  FITL, New York University</div>
-                            <p>Built a RESTful API driven web app (Django, React.js, SQL) to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
+                            <p>Built a RESTful API driven web app (Django, React.js, SQL) to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Dec 2020</span></div>
                     </div>
@@ -111,7 +111,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Associate Product Manager Intern</h3>
                             <div class="subheading mb-3"><span style="font-size: 1.1em; color:#1798c1;"><i class="fab fa-salesforce"></i></span>  Salesforce.com, San Francisco CA</div>
-                            <p>Worked in Platform Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
+                            <p>Led cross-functional effort to launch a centralized tool to consolidate fragmented release schedules</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Aug 2020</span></div>
                     </div>
@@ -119,7 +119,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Summer Research Intern (Statistics)</h3>
                             <div class="subheading mb-3"><img alt src = "/assets/img/iisc.jpg" style="max-height: 33px;">  Indian Institute of Science, Bangalore</div>
-                            <p>Analyzed Google's traffic speed data to explore statistical distributions of link-level traffic speed on transportation networks and developed a dedicated algorithm for the task of link extraction leveraging from Google Maps API.</p>
+                            <p>Analyzed Google's traffic speed data to explore statistical distributions of link-level traffic speed on transportation networks and developed a dedicated algorithm for the task of link extraction leveraging from Google Maps API</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2018 - July 2018</span></div>
                     </div>
@@ -127,7 +127,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Applied Machine Learning Intern (NLP)</h3>
                             <div class="subheading mb-3"><img alt src = "assets/img/iitbombay.png" style="max-height: 35px;">  Indian Institute of Technology, Bombay</div>
-                            <p>Demonstrated different machine learning and deep learning approaches to improve features for ameliorating the error corrections in Sanskrit OCR documents like LSTM and attention models-RNN.</p>
+                            <p>Demonstrated different machine learning and deep learning approaches to improve features for ameliorating the error corrections in Sanskrit OCR documents like LSTM and attention models-RNN</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 - Oct 2017</span></div>
                     </div>
