--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
                             <p>GPA: 3.85/4 </p>
                             <p>Design and Analysis of Algorithms, Operating Systems, Computer Networking, Database Management Systems, Java - Special Topics, Big Data, Cloud Computing, Deep Learning, Application Security</p>                            
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">New York, NY</span></div>
                     </div>
                     <br>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Indian Institute of Technology Kharagpur</h3>
+                            <h3 class="mb-0">Indian Institute of Technology</h3>
                             <div class="subheading mb-3">Bachelor of Technology</div>
                             <p>GPA: 9.03/10 | <b>Gold Medalist</b></p>
                             <p>Algorithms and Data Structures, Probability and Statistics, Switching Circuits and Logic Design, Computer Architecture and Operating System, Machine Learning, Artificial Intelligence, Natural Language Processing, Parallel Programming</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2015 - Aug 2019</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Kharagpur, India</span></div>
                     </div>
                 </div>
             </section>
