--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineer</h3>
+                            <h3 class="mb-0">Software Engineer II</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, Seattle WA</div>
                             <p>Subject Matter Expert for Twitch's distributed payments system that orchestrates "X-million $" transactions daily<i></i></p>
                         </div>
